Auto stash before merge of "CJAL-CajaGeneral" and "JOTM-Cambio-reporte"
cjal-27/1/2018- Roles cambios

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Nueva.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Nueva.cshtml
@@ -312,7 +312,7 @@
                                             <label for="ddlEdo">
                                                 Estado:*
                                             </label>
-                                            @Html.TextBoxFor(m => m.EstadoProvincia, new { @class = "form-control hid", @placeholder = "Estado" })
+                                            @Html.TextBoxFor(m => m.EstadoProvincia, new {@id = "txtEdoP", @class = "form-control hid", @placeholder = "Estado" })
                                             <select name="IdEstadoRep" id="ddlEdo" class="form-control selectpicker z-index show-tick" data-live-search="true">
                                                 @*@foreach (var lst in ViewBag.ListaEstados)
                                                     {
