--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedores.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedores.cshtml
@@ -124,7 +124,7 @@
                                             <div class="checkbox">
                                                 <input id="checkbox10" type="checkbox">
                                                 <label for="checkbox10">
-                                                    Trasnporta gas
+                                                    Transporta gas
                                                 </label>
                                             </div>
                                             <div class="checkbox">
