--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/Roles.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/Roles.cshtml
@@ -180,7 +180,7 @@
         <td>@Html.CheckBoxFor(m => m.AppRecargaPipa)</td>
         <td>@Html.CheckBoxFor(m => m.AppRecargaCamionetaCilindro)</td>
         <td>@Html.CheckBoxFor(m => m.AppTomaLecturaAlmacenPral)</td>
-        <td>@Html.CheckBoxFor(m => m.AppTomaLecturaEstacionCarb)
+        <td>@Html.CheckBoxFor(m => m.AppTomaLecturaEstacionCarb)</td>
         <td>@Html.CheckBoxFor(m => m.AppTomaLecturaPipa)</td>
         <td>@Html.CheckBoxFor(m => m.AppTomaLecturaCamionetaCilindro)</td>
         <td>@Html.CheckBoxFor(m => m.AppTomaLecturaReporteDelDia)</td>
