--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
@@ -314,26 +314,26 @@
                                                 <thead>
                                                     <tr>
                                                         <th>Rol</th>
-                                                        <th>App Ver Orden Compra</th>
-                                                        <th>App Compra Entra Gas</th>
-                                                        <th>App Compra Gas Iniciar Descarga</th>
-                                                        <th>App Compra Gas Finalizar Descarga</th>
-                                                        <th>App Autoconsumo Inventario Gral</th>
-                                                        <th>App Autoconsumo Estación Carb</th>
-                                                        <th>App Autoconsumo Pipa</th>
-                                                        <th>App Calibracion Estación Carb</th>
-                                                        <th>App Calibracion Pipa</th>
-                                                        <th>App Calibracion Camioneta Cilindro</th>
-                                                        <th>App Recarga Estación Carb</th>
-                                                        <th>App Recarga Pipa</th>
-                                                        <th>App Recarga Camioneta Cilindro</th>
-                                                        <th>App Toma Lectura AlmacenPral</th>
-                                                        <th>App Toma Lectura Estación Carb</th>
-                                                        <th>App Toma Lectura Pipa</th>
-                                                        <th>App Toma Lectura Camioneta Cilindro</th>
-                                                        <th>App Toma Lectura Reporte Del Día</th>
-                                                        <th>App Traspaso Estación Carb</th>
-                                                        <th>App Traspaso Pipa</th>
+                                                        <th>Ver Orden Compra</th>
+                                                        <th>Compra Entra Gas</th>
+                                                        <th>Compra Gas Iniciar Descarga</th>
+                                                        <th>Compra Gas Finalizar Descarga</th>
+                                                        <th>Autoconsumo Inventario Gral</th>
+                                                        <th>Autoconsumo Estación Carb</th>
+                                                        <th>Autoconsumo Pipa</th>
+                                                        <th>Calibracion Estación Carb</th>
+                                                        <th>Calibracion Pipa</th>
+                                                        <th>Calibracion Camioneta Cilindro</th>
+                                                        <th>Recarga Estación Carb</th>
+                                                        <th>Recarga Pipa</th>
+                                                        <th>Recarga Camioneta Cilindro</th>
+                                                        <th>Toma Lectura AlmacenPral</th>
+                                                        <th>Toma Lectura Estación Carb</th>
+                                                        <th>Toma Lectura Pipa</th>
+                                                        <th>Toma Lectura Camioneta Cilindro</th>
+                                                        <th>Toma Lectura Reporte Del Día</th>
+                                                        <th>Traspaso Estación Carb</th>
+                                                        <th>Traspaso Pipa</th>
                                                         <th>Acciones</th>
                                                     </tr>
                                                 </thead>
@@ -364,10 +364,10 @@
                                                 <thead>
                                                     <tr>
                                                         <th>Rol</th>
-                                                        <th>App Disposicion Efectivo</th>
-                                                        <th>App Camioneta Punto Venta</th>
-                                                        <th>App Estacion Carb Punto Venta</th>
-                                                        <th>App Pipa Punto Venta</th>
+                                                        <th>Disposicion Efectivo</th>
+                                                        <th>Camioneta Punto Venta</th>
+                                                        <th>Estacion Carb Punto Venta</th>
+                                                        <th>Pipa Punto Venta</th>
                                                         <th>Acciones</th>
                                                     </tr>
                                                 </thead>
