CJAL-28/11/2018/Ajustes Precio venta

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
@@ -45,6 +45,10 @@
                 debugger
                 var url = "/PrecioVenta/GetConfiguracionEmpresa";
                 var id = $('#ddlEmpresas').find('option:selected').val();
+                if (id == undefined)
+                {
+
+                    }
              
                 $.getJSON(url, { idEmpresa: id }, function (data) {
                     var factor = precio - data;
