JOTM-29/11/2018-Cambios ventas
Cambios de ventas

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_p5000.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_p5000.xml
@@ -93,6 +93,15 @@
 
             </NumberPicker>
 
+            <EditText
+                android:id="@+id/ETLecturaP5000CantidadNull"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                tools:targetApi="o"
+                android:inputType="number"
+                android:visibility="gone" />
+
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
