--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_lectura_p5000.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_lectura_p5000.xml
@@ -95,6 +95,16 @@
 
             </NumberPicker>
 
+            <EditText
+                android:id="@+id/ETLecturaP5000CantidadNull"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                tools:targetApi="o"
+                android:inputType="number"
+                android:visibility="gone"
+                tools:ignore="Autofill,LabelFor" />
+
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
