--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
@@ -57,7 +57,8 @@
                 android:text="@string/subtotal"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/scrollView4" />
+                app:layout_constraintTop_toBottomOf="@+id/scrollView4"
+                android:layout_marginLeft="108dp" />
 
             <TextView
                 android:id="@+id/TVPuntoVentaPagarActivitySubtotal"
@@ -70,7 +71,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/textView24"
-                app:layout_constraintTop_toBottomOf="@+id/scrollView4" />
+                app:layout_constraintTop_toBottomOf="@+id/scrollView4"
+                android:layout_marginLeft="104dp"
+                android:layout_marginRight="40dp" />
 
             <TextView
                 android:id="@+id/TVPuntoVentaPagarActivityIva"
@@ -79,7 +82,8 @@
                 android:layout_marginEnd="40dp"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textView28" />
+                app:layout_constraintTop_toTopOf="@+id/textView28"
+                android:layout_marginRight="40dp" />
 
             <TextView
                 android:id="@+id/textView30"
@@ -130,7 +134,8 @@
                 app:layout_constraintEnd_toStartOf="@+id/SPuntoVentaActivityCredito"
                 app:layout_constraintHorizontal_bias="0.101"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView30" />
+                app:layout_constraintTop_toBottomOf="@+id/textView30"
+                android:layout_marginRight="8dp" />
 
             <Switch
                 android:id="@+id/SPuntoVentaActivityCredito"
@@ -141,7 +146,8 @@
                 android:text="@string/credito"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/TVPuntoVentaActivityPagarTotal" />
+                app:layout_constraintTop_toBottomOf="@+id/TVPuntoVentaActivityPagarTotal"
+                android:layout_marginRight="8dp" />
 
             <TextView
                 android:id="@+id/textView32"
@@ -156,13 +162,14 @@
                 app:layout_constraintEnd_toStartOf="@+id/ETPuntoVentaPagarActivityEfectivo"
                 app:layout_constraintHorizontal_bias="0.55"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaPagarActivityFactura" />
+                app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaPagarActivityFactura"
+                android:layout_marginLeft="80dp"
+                android:layout_marginRight="8dp" />
 
             <EditText
                 android:id="@+id/ETPuntoVentaPagarActivityEfectivo"
                 android:layout_width="144dp"
                 android:layout_height="45dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:autofillHints=""
                 android:ems="10"
@@ -170,12 +177,11 @@
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/BtnPuntoVentaPagarActivityConfirmar"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaActivityCredito"
                 app:layout_constraintVertical_bias="0.314"
                 tools:ignore="LabelFor"
-                tools:targetApi="o" />
+                tools:targetApi="o"
+                android:layout_marginRight="8dp" />
 
             <Button
                 android:id="@+id/BtnPuntoVentaPagarActivityOpciones"
@@ -227,6 +233,22 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView32"
                 app:layout_constraintVertical_bias="1.0"
                 tools:ignore="UnusedAttribute" />
+
+            <TextView
+                android:id="@+id/TVPuntoVentaPagarActivityEfectivo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/total_en_efectivo"
+                app:layout_constraintBottom_toTopOf="@+id/BtnPuntoVentaPagarActivityOpciones"
+                app:layout_constraintEnd_toStartOf="@+id/ETPuntoVentaPagarActivityEfectivo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaPagarActivityFactura" />
             <!--android:backgroundTint="@color/colorButtonLogin"-->
 
         </android.support.constraint.ConstraintLayout>
