--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplemento.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplemento.cshtml
@@ -26,11 +26,12 @@
 </div>
 <section class="content home">
     <div class="container-fluid">
-        @using (Html.BeginForm("OrdenCompraComplemento", "OrdenCompra", FormMethod.Post))
+        @using (Html.BeginForm("ActualizarDatosFactura", "OrdenCompra", FormMethod.Post))
         {
             @Html.HiddenFor(m => m.IdEmpresa)
-            @Html.HiddenFor(m => m.IdEmpresa)
             @Html.HiddenFor(m => m.IdRequisicion)
+            @Html.HiddenFor(m => m.IdOrdenCompra)
+            @Html.HiddenFor(m => m.FechaAutorizacion)
             <div class="block-header">
                 <div class="row clearfix">
                     <div class="col-lg-5 col-md-5 col-sm-12">
@@ -179,7 +180,11 @@
                                 </div>
                                 <div class="row clearfix">
                                     <div class="col-sm-8 offset-md-3 offset-sm-2">
-                                        <input type="button" value="Guardar" formaction="" class="btn btn-raised btn-primary btn-round waves-effect" />
+                                        @*<button btn id="BtnFactura" formaction="ActualizarDatosFactura" class="btn btn-primary btn-round">
+                                                Guardar
+                                            </button>*@
+
+                                        <input type="submit" value="Guardar" class="btn btn-raised btn-primary btn-round waves-effect" />
                                     </div>
                                 </div>
                             </div>
@@ -189,7 +194,7 @@
                 <div class="row clearfix">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="card">
-                            <div class="header">
+                            <div class="header"><
                                 <h2><strong>Resumen de pagos</strong></h2>
                             </div>
                             <div class="body">
@@ -206,20 +211,32 @@
                                                     <td><b>Forma Pago</b></td>
                                                 </tr>
                                             </thead>
-                                            <tbody></tbody>
-                                        </table>
+                                            <tbody>
+                                                @foreach (var p in ViewBag.Pagos)
+                                                {
+                                                @*<td>Fecha Entrada</b></td>
+                                                <td>Fecha Pago</b></td>
+                                                <td>$ Total</b></td>
+                                                <td>$ Pagado</b></td>
+                                                <td>$ Por Pagar</b></td>
+                                                <td>Forma Pago</b></td>*@
+                                                }
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="row clearfix">
-                                    <label>Pagar: </label>
-                                    @Html.TextBoxFor(m => m.MontoAPagar, new { @class = "form-control" })
-                                    <input type="button" value="Solicitar Pago" formaction="OrdenCompraPago" class="btn btn-default btn-round" />
+                                    <div class="row clearfix">
+                                        <label>Pagar: </label>
+                                        @Html.TextBoxFor(m => m.MontoAPagar, new { @class = "form-control" })
+
+
+                                        <input type="submit" value="Solicitar Pago" formaction="@Url.Action("SolicitarPago")" formmethod="post" class="btn btn-raised btn-primary btn-round waves-effect" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
         }
     </div>
 </section>
