JOTM-29/11/2018-Registrar lecturas camioneta
* Registra lectura inicial camioneta
* Registra lectura final camioneta
* Registra lisener camioenta

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/cliente_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/cliente_item.xml
@@ -60,7 +60,7 @@
 
             <TextView
                 android:id="@+id/TVBuscarClienteActivityNombre"
-                android:layout_width="0sp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 app:layout_column="1"
